[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/pieces/knight.png" type="Texture" id=1]
[ext_resource path="res://assets/grid.png" type="Texture" id=2]
[ext_resource path="res://assets/pieces/circle.png" type="Texture" id=3]
[ext_resource path="res://assets/pieces/pawn.png" type="Texture" id=4]
[ext_resource path="res://assets/pieces/ring.png" type="Texture" id=5]
[ext_resource path="res://assets/pieces/samurai.png" type="Texture" id=6]
[ext_resource path="res://assets/pieces/musket.png" type="Texture" id=7]
[ext_resource path="res://assets/pieces/general.png" type="Texture" id=8]
[ext_resource path="res://assets/pieces/archer.png" type="Texture" id=9]
[ext_resource path="res://assets/pieces/fortress.png" type="Texture" id=10]
[ext_resource path="res://assets/pieces/cannon.png" type="Texture" id=11]
[ext_resource path="res://assets/pieces/captain.png" type="Texture" id=12]
[ext_resource path="res://assets/pieces/M_general.png" type="Texture" id=13]
[ext_resource path="res://assets/pieces/spy.png" type="Texture" id=14]
[ext_resource path="res://assets/pieces/L_general.png" type="Texture" id=15]
[ext_resource path="res://assets/square.png" type="Texture" id=16]
[ext_resource path="res://assets/pieces/king.png" type="Texture" id=17]
[ext_resource path="res://scripts/instructions.gd" type="Script" id=18]
[ext_resource path="res://assets/GlacialIndifference-Italic.otf" type="DynamicFontData" id=19]
[ext_resource path="res://assets/arrow.png" type="Texture" id=20]
[ext_resource path="res://assets/x.png" type="Texture" id=21]

[sub_resource type="TileSet" id=1]
0/name = "grid.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CircleShape2D" id=2]
radius = 31.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[sub_resource type="DynamicFont" id=5]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 19 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 35, 35 )

[node name="instructions" type="Node2D"]
script = ExtResource( 18 )

[node name="back" type="Sprite" parent="."]
self_modulate = Color( 0.270588, 0.270588, 0.270588, 1 )
position = Vector2( 518.5, 306 )
scale = Vector2( 14.1094, 8.75 )
z_index = -12
texture = ExtResource( 16 )

[node name="tile" type="Sprite" parent="."]
position = Vector2( 205, -74 )
texture = ExtResource( 16 )

[node name="tiles" type="Position2D" parent="."]
position = Vector2( 252, 16 )

[node name="grid" type="TileMap" parent="."]
modulate = Color( 0.054902, 0.27451, 0.470588, 1 )
position = Vector2( 252, 16 )
z_index = 1
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0 )

[node name="Sprite" type="Sprite" parent="grid"]
modulate = Color( 0.780392, 1, 0.760784, 1 )
position = Vector2( 288, 288 )
scale = Vector2( 7.375, 7.375 )
z_index = -10
texture = ExtResource( 16 )

[node name="pieces" type="Position2D" parent="."]
position = Vector2( 117, 95 )

[node name="pawn" type="TouchScreenButton" parent="pieces"]
shape = SubResource( 2 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="pieces/pawn"]
self_modulate = Color( 0.921569, 0.921569, 0.921569, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="ring" type="Sprite" parent="pieces/pawn/Sprite"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
texture = ExtResource( 5 )

[node name="icon" type="Sprite" parent="pieces/pawn/Sprite/ring"]
texture = ExtResource( 4 )

[node name="M_general" type="TouchScreenButton" parent="pieces"]
position = Vector2( 0, 65 )
shape = SubResource( 2 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="pieces/M_general"]
self_modulate = Color( 0.921569, 0.921569, 0.921569, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="ring" type="Sprite" parent="pieces/M_general/Sprite"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
texture = ExtResource( 5 )

[node name="icon" type="Sprite" parent="pieces/M_general/Sprite/ring"]
texture = ExtResource( 13 )

[node name="L_general" type="TouchScreenButton" parent="pieces"]
position = Vector2( 0, 130 )
shape = SubResource( 2 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="pieces/L_general"]
self_modulate = Color( 0.921569, 0.921569, 0.921569, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="ring" type="Sprite" parent="pieces/L_general/Sprite"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
texture = ExtResource( 5 )

[node name="icon" type="Sprite" parent="pieces/L_general/Sprite/ring"]
texture = ExtResource( 15 )

[node name="general" type="TouchScreenButton" parent="pieces"]
position = Vector2( 0, 195 )
shape = SubResource( 2 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="pieces/general"]
self_modulate = Color( 0.921569, 0.921569, 0.921569, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="ring" type="Sprite" parent="pieces/general/Sprite"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
texture = ExtResource( 5 )

[node name="icon" type="Sprite" parent="pieces/general/Sprite/ring"]
texture = ExtResource( 8 )

[node name="archer" type="TouchScreenButton" parent="pieces"]
position = Vector2( 0, 260 )
shape = SubResource( 2 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="pieces/archer"]
self_modulate = Color( 0.921569, 0.921569, 0.921569, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="ring" type="Sprite" parent="pieces/archer/Sprite"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
texture = ExtResource( 5 )

[node name="icon" type="Sprite" parent="pieces/archer/Sprite/ring"]
texture = ExtResource( 9 )

[node name="knight" type="TouchScreenButton" parent="pieces"]
position = Vector2( 0, 325 )
shape = SubResource( 2 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="pieces/knight"]
self_modulate = Color( 0.921569, 0.921569, 0.921569, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="ring" type="Sprite" parent="pieces/knight/Sprite"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
texture = ExtResource( 5 )

[node name="icon" type="Sprite" parent="pieces/knight/Sprite/ring"]
texture = ExtResource( 1 )

[node name="musket" type="TouchScreenButton" parent="pieces"]
position = Vector2( 100, 0 )
shape = SubResource( 2 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="pieces/musket"]
self_modulate = Color( 0.921569, 0.921569, 0.921569, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="ring" type="Sprite" parent="pieces/musket/Sprite"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
texture = ExtResource( 5 )

[node name="icon" type="Sprite" parent="pieces/musket/Sprite/ring"]
texture = ExtResource( 7 )

[node name="captain" type="TouchScreenButton" parent="pieces"]
position = Vector2( 100, 65 )
shape = SubResource( 2 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="pieces/captain"]
self_modulate = Color( 0.921569, 0.921569, 0.921569, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="ring" type="Sprite" parent="pieces/captain/Sprite"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
texture = ExtResource( 5 )

[node name="icon" type="Sprite" parent="pieces/captain/Sprite/ring"]
texture = ExtResource( 12 )

[node name="samurai" type="TouchScreenButton" parent="pieces"]
position = Vector2( 100, 130 )
shape = SubResource( 2 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="pieces/samurai"]
self_modulate = Color( 0.921569, 0.921569, 0.921569, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="ring" type="Sprite" parent="pieces/samurai/Sprite"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
texture = ExtResource( 5 )

[node name="icon" type="Sprite" parent="pieces/samurai/Sprite/ring"]
texture = ExtResource( 6 )

[node name="fortress" type="TouchScreenButton" parent="pieces"]
position = Vector2( 100, 195 )
shape = SubResource( 2 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="pieces/fortress"]
self_modulate = Color( 0.921569, 0.921569, 0.921569, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="ring" type="Sprite" parent="pieces/fortress/Sprite"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
texture = ExtResource( 5 )

[node name="icon" type="Sprite" parent="pieces/fortress/Sprite/ring"]
texture = ExtResource( 10 )

[node name="cannon" type="TouchScreenButton" parent="pieces"]
position = Vector2( 100, 260 )
shape = SubResource( 2 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="pieces/cannon"]
self_modulate = Color( 0.921569, 0.921569, 0.921569, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="ring" type="Sprite" parent="pieces/cannon/Sprite"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
texture = ExtResource( 5 )

[node name="icon" type="Sprite" parent="pieces/cannon/Sprite/ring"]
texture = ExtResource( 11 )

[node name="spy" type="TouchScreenButton" parent="pieces"]
position = Vector2( 100, 325 )
shape = SubResource( 2 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="pieces/spy"]
self_modulate = Color( 0.921569, 0.921569, 0.921569, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="ring" type="Sprite" parent="pieces/spy/Sprite"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
texture = ExtResource( 5 )

[node name="icon" type="Sprite" parent="pieces/spy/Sprite/ring"]
texture = ExtResource( 14 )

[node name="king" type="TouchScreenButton" parent="pieces"]
position = Vector2( 50, 400 )
shape = SubResource( 2 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="pieces/king"]
self_modulate = Color( 0.921569, 0.921569, 0.921569, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="ring" type="Sprite" parent="pieces/king/Sprite"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
texture = ExtResource( 5 )

[node name="icon" type="Sprite" parent="pieces/king/Sprite/ring"]
texture = ExtResource( 17 )

[node name="demo" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.921569, 0.921569, 0.921569, 1 )
position = Vector2( 540, 304 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="ring" type="Sprite" parent="demo"]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
texture = ExtResource( 5 )

[node name="icon" type="Sprite" parent="demo/ring"]
texture = ExtResource( 4 )

[node name="lv1" type="TouchScreenButton" parent="."]
position = Vector2( 884, 220 )
shape = SubResource( 4 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="lv1"]
modulate = Color( 0.560784, 0.482353, 0.482353, 1 )
self_modulate = Color( 0.0784314, 0.568627, 0.592157, 1 )
texture = ExtResource( 16 )

[node name="Label" type="Label" parent="lv1"]
margin_left = -36.0
margin_top = -32.0
margin_right = 28.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 5 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lv2" type="TouchScreenButton" parent="."]
position = Vector2( 885, 302 )
shape = SubResource( 4 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="lv2"]
self_modulate = Color( 0.0784314, 0.568627, 0.592157, 1 )
texture = ExtResource( 16 )

[node name="Label" type="Label" parent="lv2"]
margin_left = -34.0
margin_top = -33.0
margin_right = 30.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 5 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lv3" type="TouchScreenButton" parent="."]
position = Vector2( 886, 387 )
shape = SubResource( 4 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="lv3"]
self_modulate = Color( 0.0784314, 0.568627, 0.592157, 1 )
texture = ExtResource( 16 )

[node name="Label" type="Label" parent="lv3"]
margin_left = -34.0
margin_top = -33.0
margin_right = 30.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 5 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arrow_h" type="Position2D" parent="."]
position = Vector2( 50, 1 )

[node name="arrow" type="Sprite" parent="arrow_h"]
visible = false
position = Vector2( 489, 44 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )

[node name="arrow2" type="Sprite" parent="arrow_h"]
visible = false
position = Vector2( 748, 299 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )

[node name="arrow3" type="Sprite" parent="arrow_h"]
visible = false
position = Vector2( 489, 562 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )

[node name="arrow4" type="Sprite" parent="arrow_h"]
visible = false
position = Vector2( 232, 300 )
rotation = 3.14159
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )

[node name="arrow_v" type="Position2D" parent="."]
visible = false
position = Vector2( 51, 0 )

[node name="arrow" type="Sprite" parent="arrow_v"]
position = Vector2( 738, 54 )
rotation = -0.785398
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )

[node name="arrow2" type="Sprite" parent="arrow_v"]
position = Vector2( 741, 556 )
rotation = 0.785398
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )

[node name="arrow3" type="Sprite" parent="arrow_v"]
position = Vector2( 239, 554 )
rotation = 2.35619
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )

[node name="arrow4" type="Sprite" parent="arrow_v"]
position = Vector2( 241, 54 )
rotation = -2.35619
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )

[node name="block" type="Position2D" parent="."]
visible = false
position = Vector2( 50, 1 )

[node name="Sprite" type="Sprite" parent="block"]
modulate = Color( 0.368627, 0.368627, 0.368627, 1 )
self_modulate = Color( 0.321569, 0.321569, 0.321569, 1 )
position = Vector2( 835, 301 )
texture = ExtResource( 16 )

[node name="Label2" type="Label" parent="block/Sprite"]
margin_left = -34.0
margin_top = -33.0
margin_right = 30.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 5 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite3" type="Sprite" parent="block"]
self_modulate = Color( 0.0784314, 0.568627, 0.592157, 1 )
position = Vector2( 834, 219 )
texture = ExtResource( 16 )

[node name="Label2" type="Label" parent="block/Sprite3"]
margin_left = -34.0
margin_top = -33.0
margin_right = 30.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 5 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="block"]
modulate = Color( 0.368627, 0.368627, 0.368627, 1 )
self_modulate = Color( 0.321569, 0.321569, 0.321569, 1 )
position = Vector2( 836, 386 )
texture = ExtResource( 16 )

[node name="Label2" type="Label" parent="block/Sprite2"]
margin_left = -34.0
margin_top = -33.0
margin_right = 30.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 5 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x" type="TouchScreenButton" parent="."]
position = Vector2( 944, 48 )
shape = SubResource( 6 )
shape_centered = false

[node name="Sprite2" type="Sprite" parent="x"]
modulate = Color( 0.639216, 0.192157, 0.192157, 1 )
texture = ExtResource( 16 )

[node name="Sprite" type="Sprite" parent="x"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 21 )

[connection signal="pressed" from="pieces/pawn" to="." method="_on_pawn_pressed"]
[connection signal="pressed" from="pieces/M_general" to="." method="_on_M_general_pressed"]
[connection signal="pressed" from="pieces/L_general" to="." method="_on_L_general_pressed"]
[connection signal="pressed" from="pieces/general" to="." method="_on_general_pressed"]
[connection signal="pressed" from="pieces/archer" to="." method="_on_archer_pressed"]
[connection signal="pressed" from="pieces/knight" to="." method="_on_knight_pressed"]
[connection signal="pressed" from="pieces/musket" to="." method="_on_musket_pressed"]
[connection signal="pressed" from="pieces/captain" to="." method="_on_captain_pressed"]
[connection signal="pressed" from="pieces/samurai" to="." method="_on_samurai_pressed"]
[connection signal="pressed" from="pieces/fortress" to="." method="_on_fortress_pressed"]
[connection signal="pressed" from="pieces/cannon" to="." method="_on_cannon_pressed"]
[connection signal="pressed" from="pieces/spy" to="." method="_on_spy_pressed"]
[connection signal="pressed" from="pieces/king" to="." method="_on_king_pressed"]
[connection signal="pressed" from="lv1" to="." method="_on_lv1_pressed"]
[connection signal="pressed" from="lv2" to="." method="_on_lv2_pressed"]
[connection signal="pressed" from="lv3" to="." method="_on_lv3_pressed"]
[connection signal="pressed" from="x" to="." method="_on_x_pressed"]
